--- a/generators/app/templates/agents/dialogflow/welcome.json.ejs
+++ b/generators/app/templates/agents/dialogflow/welcome.json.ejs
@@ -10,23 +10,16 @@
       "parameters": [],
       "messages": [
       <%
-        const languages = Object.keys(config.convoSpec.speeches.greeting.replies);
+        const languages = Object.keys(greetings Pact);
         for (var i = 0, iLen = languages.length; i < iLen; i++) {
+          const replies = config.convoSpec.conversations.greetings[languages[i]].replies
       %>
         {
-          "type": 0,
+          "type": "simple_response",
           "lang": "<%= languages[i] %>",
-          "speech": [
-            <%
-              const replies = config.convoSpec.speeches.greeting.replies[languages[i]];
-              for (var j = 0, jLen = replies.length; j < jLen; j++) {
-            %>
-            "<%= replies[j] %>"<% if (j < jLen - 1) { %>,<% } %>
-            <%
-              }
-            %>
-          ]
-        }<% if (i < iLen - 1) { %>,<% } %>
+          "platform": "google",
+          "textToSpeech": "<%= replies[i] %>"
+         }<% if (i < iLen - 1) { %>,<% } %>
       <%
         }
       %>
