--- a/generators/app/templates/agents/dialogflow/intent_usersays_lang.json.ejs
+++ b/generators/app/templates/agents/dialogflow/intent_usersays_lang.json.ejs
@@ -1,11 +1,11 @@
 [
   <%
-    for (var i = 0, iLen = query.messages[language].length; i < iLen; i++) {
+    for (let i = 0, iLen = query.messages[language].length; i < iLen; i++) {
   %>
   {
     "data": [
     <%
-      for (var j = 0, jLen = query.messages[language][i].fragments.length; j < jLen; j++) {
+      for (let j = 0, jLen = query.messages[language][i].fragments.length; j < jLen; j++) {
     %>
       {
         <%
