--- a/generators/app/templates/middlewares/openapi-cloudfunctions/package.json.ejs
+++ b/generators/app/templates/middlewares/openapi-cloudfunctions/package.json.ejs
@@ -8,7 +8,7 @@
   "dependencies": {
     <%
       const dependencies = config.convoSpec.middlewares.openapi_cloudfunctions.dependencies;
-      for (var i = 0, len = dependencies.length; i < len; i++) {
+      for (let i = 0, len = dependencies.length; i < len; i++) {
     %>
     "<%= dependencies[i].name %>": "<%= dependencies[i].version %>",
     <%
