--- a/generators/app/templates/agents/dialogflow/entity_entries_lang.json.ejs
+++ b/generators/app/templates/agents/dialogflow/entity_entries_lang.json.ejs
@@ -1,6 +1,6 @@
 [
 <%
-  for (var i = 0, len = param.synonyms.length; i < len; i++) {
+  for (let i = 0, len = param.synonyms.length; i < len; i++) {
 %>
 {
   "value": "<%= param.synonyms[i] %>",
