--- a/generators/app/templates/agents/dialogflow/intent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/intent.json.ejs
@@ -5,7 +5,7 @@
   "responses": [
     <%
       const languages = Object.keys(query.messages);
-      for (var i = 0, iLen = languages.length; i < iLen; i++) {
+      for (let i = 0, iLen = languages.length; i < iLen; i++) {
     %>
     {
       "resetContexts": false,
@@ -13,8 +13,8 @@
       "parameters": [
       <%
         const messages = query.messages[languages[i]];
-        for (var j = 0, jLen = messages.length; j < jLen; j++) {
-          for (var k = 0, kLen = messages[j].params.length; k < kLen; k++) {
+        for (let j = 0, jLen = messages.length; j < jLen; j++) {
+          for (let k = 0, kLen = messages[j].params.length; k < kLen; k++) {
       %>
       {
         "required": false,
