--- a/generators/app/templates/agents/dialogflow/entity.json.ejs
+++ b/generators/app/templates/agents/dialogflow/entity.json.ejs
@@ -1,5 +1,5 @@
 {
-  "name": "<%= param.name %>",
+  "name": "<%- param.name %>",
   "isOverridable": true,
   "isEnum": true,
   "automatedExpansion": true
