--- a/generators/app/templates/agents/dialogflow/intent.json.ejs
+++ b/generators/app/templates/agents/dialogflow/intent.json.ejs
@@ -1,5 +1,5 @@
 {
-  "name": "<%= query.name %>",
+  "name": "<%- query.name %>",
   "auto": true,
   "contexts": [],
   "responses": [
@@ -19,7 +19,7 @@
       {
         "required": false,
         "dataType": "@<%= messages[j].params[k] %>",
-        "name": "<%= messages[j].params[k] %>",
+        "name": "<%- messages[j].params[k] %>",
         "value": "$<%= messages[j].params[k] %>",
         "isList": false
       }<% if (j < jLen - 1 || k < kLen - 1) { %>,<% } %>
@@ -31,7 +31,7 @@
       "messages": [
         {
           "type": 0,
-          "lang": "<%= languages[i] %>",
+          "lang": "<%- languages[i] %>",
           "speech": []
         }
       ],
